[tool.poetry]
name = "vikhack-2024"
version = "0.1.0"
description = ""
authors = ["Frank40790 <143776004+Frank40790@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
openai = "^1.40.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
